[package]
name = "sandboxer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
landlock = { path = "../landlock" } 
nix = "0.23.1"
libbpf-rs = "0.14"
libbpf-sys = "0.5.0-2"
libc = "0.2.108"
anyhow = "1.0.47"
object = "0.25"
plain = "0.2.3"
serde = { version = "1.0.131", features = ["derive"] }
serde_json = "1.0.73"
thiserror = "1.0"
caps = "0.5.3"


[build-dependencies]
libbpf-cargo = "0.9"
bindgen = "0.59.2"
anyhow = "1.0.47"

[lib]
name = "sandboxer"
path = "./src/lib.rs"
